<resources>
    <string name="app_name">MeetUpByte</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Search</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="connected">Connected</string>
    <string name="recents">Recents</string>
    <string name="downloads">Downloads</string>
    <string name="mylist">My List</string>
    <string name="awiskartech">Mr.awiskar tech</string>
    <string name="email">awiskartech@gmail.com</string>
    <string name="menu_login">Login</string>
    <string name="menu_signup">SignUp</string>
</resources>